src/test/ui/invalid/invalid-plugin-attr.stderr
error: unused attribute
  --> $DIR/invalid-plugin-attr.rs:4:1
   |
LL | #[plugin(bla)]
   | ^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/invalid-plugin-attr.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: crate-level attribute should be an inner attribute: add an exclamation mark: #![foo]
  --> $DIR/invalid-plugin-attr.rs:4:1
   |
LL | #[plugin(bla)]
   | ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

